CV v3: Fix white spaces

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1228,7 +1228,7 @@ img {
 	}
 
 	.about__img{
-		width: 350px;
+		width: 300px;
 	}
 
 	.about__description{
